More edits to the document.

--- a/doc/PyMCMC.tex
+++ b/doc/PyMCMC.tex
@@ -69,6 +69,18 @@
   E-mail: \email{ christopher.strickland@qut.edu.au}
 }
 
+%% I would put both our affiliations in If I knew how.
+
+% \Address{
+%   Robert Denham\\
+%   Remote Sensing Centre\\
+%   Department of Environment and Resource Management\\
+%   GPO Box 2454\\
+%   Brisbane,
+%   Queensland, 4001, Australia\\
+%   E-mail: \email{ robert.denham@derm.qld.gov.au}
+% }
+
 %% It is also possible to add a telephone and fax number
 %% before the e-mail in the following format:
 %% Telephone: +43/1/31336-5053
