--- a/doc/PyMCMC.tex
+++ b/doc/PyMCMC.tex
@@ -45,8 +45,8 @@
 
 }
 
-\Keywords{keywords, comma-separated, not capitalized, \proglang{Python}}
-\Plainkeywords{keywords, comma-separated, not capitalized, Java} 
+\Keywords{MCMC, Metropolis Hastings, Gibbs, Bayesian, OBMC, slice sampler, \proglang{Python}}
+\Plainkeywords{MCMC, Metropolis Hastings, Gibbs, Bayesian, OBMC, slice sampler, Python} 
 
 
 %% publication information
