--- a/doc/PyMCMC.tex
+++ b/doc/PyMCMC.tex
@@ -120,20 +120,22 @@ contains a class that can be used along with Gibbs sampler for
 Bayesian variable selection.
 
 % \pkg{PyMCMC} is designed to be fully flexible, with respect to MCMC design.
-This is important in practice, as MCMC algorithms usually need to
-be tailored to the problem of interest in order to ensure good results.
+This is important in practice, as MCMC algorithms usually need to be
+tailored to the problem of interest in order to ensure good results.
 Issues such as block size and parameterisation can have a dramatic
 effect on the convergence of MCMC sampling schemes. For instance,
 \citet{LuiKongWong1994} show theoretically that jointly sampling
-parameters in a Gibbs scheme typically leads to a reduction in correlation
-in the associated Markov chain in comparison to individually sampling
-parameters. This is demonstrated in practical applications in \citet{CarterKohn1994}
-and \citet{KimShephardChib1998}. Reducing the correlation in the
-Markov chain enables it to move more freely through the parameter
-space and as such enables it to escape from local modes in the posterior
-distribution. Parameterisation can also have a dramatic effect on
-the convergence of MCMC samplers; see for example \citet{GelfandSahuCarlin1995},
-\citet{RobersSahu1997}, \citet{PittShepard1999}, \citet{RobertMengersen1999},
+parameters in a Gibbs scheme typically leads to a reduction in
+correlation in the associated Markov chain in comparison to
+individually sampling parameters. This is demonstrated in practical
+applications in \citet{CarterKohn1994} and
+\citet{KimShephardChib1998}. Reducing the correlation in the Markov
+chain enables it to move more freely through the parameter space and
+as such enables it to escape from local modes in the posterior
+distribution. Parameterisation can also have a dramatic effect on the
+convergence of MCMC samplers; see for example
+\citet{GelfandSahuCarlin1995}, \citet{RobersSahu1997},
+\citet{PittShepard1999}, \citet{RobertMengersen1999},
 \citet{FruwirthSchnatter2004} and \citet{StricklandMartinForbes2008},
 who show that the performance of the sampling schemes can be improved
 dramatically with the use of efficient parameterisation.
@@ -167,8 +169,9 @@ specialised modules.
 \begin{figure}[t!]
   \begin{center}
 \hspace*{-1cm}\includegraphics[width=18cm]{flowchart.pdf}    
-  \end{center}
-\caption{Flow chart illustrating the implementation of \pkg{PyMCMC}.\label{fig:Flow-chart-ofPyMCMC}}
+\end{center}
+\caption{Flow chart illustrating the implementation of
+  \pkg{PyMCMC}.\label{fig:Flow-chart-ofPyMCMC}}
 
 \end{figure}
 
@@ -180,23 +183,26 @@ acts as a container for various algorithms that are used in sampling
 from the conditional posterior distributions that make up the MCMC
 sampling scheme. 
 
-The structure of the paper is as follows. In Section \ref{sec:Bayesian-Analysis}
-the algorithms contained in \pkg{PyMCMC} and the user interface are described.
-This includes the Gibbs sampler, the Metropolis based algorithms and
-the slice sampler. Section \ref{sec:Bayesian-Analysis} also contains
-a description of the Bayesian regression module. Section \ref{sec:Empirical-Illustrations}
-contains three empirical examples that demonstrate how to use \pkg{PyMCMC}.
-The first example demonstrates how to use the regression module for
-the Bayesian analysis of the linear model. In particular, the stochastic
-search variable selection algorithm, see \citet{GeorgeMcCulloch1993}
-and \citet{MarinRobert2007}, is used to select a set of `most likely
-models'. The second example demonstrates how to use \pkg{PyMCMC} to analyse
-the loglinear model and the third example demonstrates how to use
-\pkg{PyMCMC} to analyse a linear model with first order autoregressive errors.
-Section \ref{sec:Using-PyMCMC-efficiently} contains discussion on
-the efficient implementation of the MCMC algorithms using \pkg{PyMCMC}.
-Section \ref{sec:PyMCMC-interacting-with} describes how to use \pkg{PyMCMC}
-interatively with \proglang{R} and Section \ref{sec:Conclusions} concludes.
+The structure of the paper is as follows. In Section
+\ref{sec:Bayesian-Analysis} the algorithms contained in \pkg{PyMCMC}
+and the user interface are described.  This includes the Gibbs
+sampler, the Metropolis based algorithms and the slice sampler.
+Section \ref{sec:Bayesian-Analysis} also contains a description of the
+Bayesian regression module. Section \ref{sec:Empirical-Illustrations}
+contains three empirical examples that demonstrate how to use
+\pkg{PyMCMC}.  The first example demonstrates how to use the
+regression module for the Bayesian analysis of the linear model. In
+particular, the stochastic search variable selection algorithm, see
+\citet{GeorgeMcCulloch1993} and \citet{MarinRobert2007}, is used to
+select a set of `most likely models'. The second example demonstrates
+how to use \pkg{PyMCMC} to analyse the loglinear model and the third
+example demonstrates how to use \pkg{PyMCMC} to analyse a linear model
+with first order autoregressive errors.  Section
+\ref{sec:Using-PyMCMC-efficiently} contains discussion on the
+efficient implementation of the MCMC algorithms using \pkg{PyMCMC}.
+Section \ref{sec:PyMCMC-interacting-with} describes how to use
+\pkg{PyMCMC} interatively with \proglang{R} and Section
+\ref{sec:Conclusions} concludes.
 
 
 \section{Bayesian analysis}
@@ -279,7 +285,7 @@ arguments are required in the initialisation of the class:
     useful when the MCMC algorithm is defined under a particular
     parametersation, but where it is desirable to report the results
     under a different parameterisation.
-\end{description}
+  \end{description}
 \end{description}
 Several functions are included as a part of the class:
 \begin{description}
@@ -299,7 +305,6 @@ Several functions are included as a part of the class:
   places for the output.
 \item \code{output({*}{*}kwargs)} - Used to produce output from the
   MCMC algorithm.
-\end{description}
   \begin{description}
   \item \code{{*}{*}kwargs} - Optional arguments that control the
     output.
@@ -331,17 +336,17 @@ Several functions are included as a part of the class:
     parameter in the block. The plotting page is divided into a number
     of subfigures. By default, the number of columns are approximately
     equal to the square root of the total number of subfigures divided
-    by the number of different plot types.
-  \end{description}
-  \begin{enumerate}
-  \item \code{blockname} The name of the parameter, for which summary
+    by the number of different plot types. Arguments to \code{plot} are:
+
+  \begin{description}
+  \item \code{blockname} - The name of the parameter, for which summary
     plots are to be generated.
   \item \code{{*}{*}kwargs} - An optional dictionary
     (\proglang{Python} data structure) containing information to
     control the summary plots.  The available keys are summarised
     below:
 
-    \begin{enumerate}
+    \begin{description}
     \item \code{elements}: A list of integers specifying the elements
       that will be plotted. For example, if the blockname is
       \code{`beta'} and
@@ -371,7 +376,8 @@ Several functions are included as a part of the class:
       subfigures on a plotting page.
     \item \code{cols}: Integer specifying the number of columns of
       subfigures on a plotting page.
-    \end{enumerate}
+    \end{description}
+  \end{description}
 
   \item \code{CODAoutput({*}{*}kwargs)} - Output the results in a
     format suitable for reading in with the statistical package
@@ -379,11 +385,11 @@ Several functions are included as a part of the class:
     there will be two files created, \code{coda.txt} and
     \code{coda.ind}.
 
-    \begin{enumerate}
+    \begin{description}
     \item \code{{*}{*}kwargs} - An optional dictionary controlling the
       CODA output.
 
-      \begin{enumerate}
+      \begin{description}
       \item \code{filename}: A string to provide an alternative
         filename for the output.  If the file has an extension this
         will form the basis for the data file and the index file will
@@ -402,9 +408,10 @@ Several functions are included as a part of the class:
       \item \code{thin}: Integer specifying how to thin the output.
         For examples if \code{thin = 10}, then every tenth element
         will be written to the CODA output.
-      \end{enumerate}
-    \end{enumerate}
-\end{enumerate}
+      \end{description}
+    \end{description}
+  \end{description}
+\end{description}
 
 \subsubsection{Metropolis Hastings}
 \label{sub:Metropolis-Hastings}
@@ -434,7 +441,7 @@ to $\min\left\{ 1,\frac{p\left(\bm{\theta}^{\ast}|\bm{y}\right)}{p\left(\bm{\the
 
 \pkg{PyMCMC} includes a class for the MH algorithm, which is called
 \code{MH}.  To initialise the class the user needs to define:
-\begin{enumerate}
+\begin{description} 
 \item \code{func} - User defined function that returns a sample for
   the parameter of interest.
 \item \code{actualprob} - User defined function that returns the log
@@ -449,20 +456,20 @@ to $\min\left\{ 1,\frac{p\left(\bm{\theta}^{\ast}|\bm{y}\right)}{p\left(\bm{\the
 \item \code{name} - The name of the parameter of interest.
 \item \code{{*}{*}kwargs} - Optional arguments:
 
-\begin{enumerate}
-\item \code{store}
-\begin{enumerate}  
-\item \code{`all'} (default), stores every iterate for the parameter
-  of interest. This is required for certain calculations.
-\item \code{`none'}, does not store any of the iterates from the parameter of
-  interest.
-\end{enumerate}
-\item \code{fixed\_parameter} - Is used if the user wants to fix the
-  parameter value that is returned. This is used for testing MCMC
-  sampling schemes.  This command will override any other
-  functionality.
-\end{enumerate}
-\end{enumerate}
+  \begin{description}
+  \item \code{store}
+    \begin{description}  
+    \item \code{`all'} (default), stores every iterate for the parameter
+      of interest. This is required for certain calculations.
+    \item \code{`none'}, does not store any of the iterates from the parameter of
+      interest.
+    \end{description}
+  \item \code{fixed\_parameter} - Is used if the user wants to fix the
+    parameter value that is returned. This is used for testing MCMC
+    sampling schemes.  This command will override any other
+    functionality.
+  \end{description}
+\end{description}
 \paragraph{Independent Metropolis Hastings}
 
 The independent MH algorithm is a special case of the MH algorithm
@@ -488,7 +495,7 @@ to $\min\left\{ 1,\frac{p\left(\bm{\theta}^{\ast}|\bm{y}\right)}{p\left(\bm{\the
 
 \pkg{PyMCMC} contains a class for the independent MH algorithm, named
 \code{IndMH}.  To initialise the class the user needs to define:
-\begin{enumerate}
+\begin{description}
 \item \code{func} - A user defined function that returns a sample for
   the parameter of interest.
 \item \code{actualprob} - A user defined function that returns the log
@@ -501,20 +508,20 @@ to $\min\left\{ 1,\frac{p\left(\bm{\theta}^{\ast}|\bm{y}\right)}{p\left(\bm{\the
 \item \code{name} - Name of the parameter of interest.
 \item \code{{*}{*}kwargs}- Optional arguments:
 
-\begin{enumerate}
+\begin{description}
 \item \code{store}
-  \begin{enumerate}
+  \begin{description}
   \item \code{`all'} (default), stores every iterate for the parameter
     of interest. This is required for certain calculations.
   \item \code{`none'}, does not store any of the iterates from the parameter
     of interest.
-  \end{enumerate}
+  \end{description}
 \item \code{fixed\_parameter} - Is used if the user wants to fix the
     parameter value that is returned. This is used for testing MCMC
     sampling schemes.  This command will override any other
     functionality.
-  \end{enumerate}
-\end{enumerate}
+  \end{description}
+\end{description}
 
 \paragraph{Random Walk Metropolis Hastings \protect \protect \\
 }
@@ -558,7 +565,7 @@ class for the random walk MH algorithm, named \code{RWMH}. The class
 distribution. Note that more general random walk MH algorithms could
 be constructed using the MH class. To initialise the class the user
 must specify:
-\begin{enumerate}
+\begin{description}
 \item \code{post} - A user defined function for the log of full
   conditional posterior distribution for the parameters of interest.
 \item \code{csig} - Scale parameter for the random walk MH algorithm.
@@ -566,15 +573,15 @@ must specify:
 \item \code{name} - Name of the parameter of interest.
 \item \code{**kwargs} - Optional arguments:
 
-  \begin{enumerate}
-  \item store
-    \begin{enumerate}
+  \begin{description}
+  \item \code{store}
+    \begin{description}
     \item \code{`all'} (default), stores every iterate for the
       parameter of interest. This is required for certain
       calculations.
     \item \code{`none'}, does not store any of the iterates from the
       parameter of interest.
-    \end{enumerate}
+    \end{description}
   \item \code{fixed\_parameter} - Is used if the user wants to fix the
     parameter value that is returned. This is used for testing MCMC
     sampling schemes.  This command will override any other
@@ -582,8 +589,8 @@ must specify:
   \item \code{adaptive} - \code{`GYS'}, Then the adaptive random walk
     MH algorithm of \citet{GarthwaiteYanScisson2010} will be used to
     optimise $\bm{\Omega}.$
-  \end{enumerate}
-\end{enumerate}
+  \end{description}
+\end{description}
 
 \subsubsection{Orientational bias Monte Carlo}
 
@@ -626,7 +633,7 @@ which the candidate density is multivariate normal, making it a
 generalisation of the random walk MH algorithm. The class for the OBMC
 algorithm is named \code{OBMC}. To initialise the class the user must
 specify:
-\begin{enumerate}
+\begin{description}
 \item \code{post} - A user defined function for the log of full
   conditional posterior distribution for the parameters of interest.
 \item \code{ntry} - Number of candidates, $L$.
@@ -634,21 +641,21 @@ specify:
 \item \code{init\_theta} - Initial value for the parameter of interest. 
 \item \code{{*}{*}kwargs} - Optional arguments:
 
-  \begin{enumerate}
+  \begin{description}
   \item \code{store}
-    \begin{enumerate}
+    \begin{description}
     \item \code{`all'} (default), stores every iterate for the
       parameter of interest. This is required for certain
       calculations.
     \item \code{`none'}, does not store any of the iterates from the
       parameter of interest.
-      \end{enumerate}
+      \end{description}
     \item \code{fixed\_parameter} - Is used if the user wants to fix
       the parameter value that is returned. This is used for testing
       MCMC sampling schemes.  This command will override any other
       functionality.
-  \end{enumerate}
-\end{enumerate}
+  \end{description}
+\end{description}
 
 \subsubsection{Closed form sampler}
 
@@ -656,7 +663,7 @@ A class is included so that the user can specify a function to sample
 the parameters of interest when there is a closed form solution. The
 name of the class is \code{CFsampler}. To initialise the class the
 user must specify:
-\begin{enumerate}
+\begin{description}
 \item \code{func} - User defined function that samples from the
   posterior distribution of interest.
 \item \code{init\_theta} - Initial value for the unknown parameter of
@@ -664,20 +671,20 @@ user must specify:
 \item \code{name} - The name of the parameter of interest.
 \item \code{{*}{*}kwargs} - Optional parameters:
 
-\begin{enumerate}
+\begin{description}
 \item \code{store}
-  \begin{enumerate}
+  \begin{description}
   \item \code{`all'} (default), stores every iterate for the parameter
     of interest. This is required for certain calculations.
   \item `none', does not store any of the iterates from the parameter
     of interest.
-  \end{enumerate}
+  \end{description}
 \item \code{fixed\_parameter} - Is used if the user wants to fix the
   parameter value that is returned. This is used for testing MCMC
   sampling schemes.  This command will override any other
   functionality.
-\end{enumerate}
-\end{enumerate}
+\end{description}
+\end{description}
 
 \subsubsection{Slice sampler}
 
@@ -785,7 +792,7 @@ to step 1,
 
 \pkg{PyMCMC} includes a class for the slice sampler named
 \code{SliceSampler.  }To initialise the class the user must define:
-\begin{enumerate}
+\begin{description}
 \item \code{func} - A $k$ dimensional list containing the set of log
   functions.
 \item \code{init\_theta} - An initial value for $\theta$.
@@ -793,21 +800,21 @@ to step 1,
 \item \code{sN} - An integer limiting slice size to $N\times ss$.
 \item \code{{*}{*}kwargs} - Optional arguments:
    
-  \begin{enumerate}
+  \begin{description}
   \item \code{store}
-    \begin{enumerate}
+    \begin{description}
     \item \code{`all'} (default), stores every iterate for the
       parameter of interest. This is required for certain
       calculations.
     \item `none', does not store any of the iterates from the
       parameter of interest.
-    \end{enumerate}
-  \item fixed\_parameter - Is used if the user wants to fix the
+    \end{description}
+  \item \code{fixed\_parameter} - Is used if the user wants to fix the
     parameter value that is returned. This is used for testing MCMC
     sampling schemes.  This command will override any other
     functionality.
-  \end{enumerate}
-\end{enumerate}
+  \end{description}
+\end{description}
 
 \subsection{Normal linear Bayesian regression model}
 \label{sec: Regression Model}
@@ -900,14 +907,14 @@ set by the user. Zellner's g-prior is specified such that
 where $\bm{\underline{\beta}}$ and $g$ are hyperparameters with values
 that are specified by the user. To initialise the class
 \code{BayesRegression} the user must specify:
-\begin{enumerate}
+\begin{description}
 \item \code{yvec} - One dimensional \pkg{Numpy} array containing the
   data.
 \item \code{xmat} - Two dimensional \pkg{Numpy} array contain the
   regressors.
 \item \code{{*}{*}kwargs} - Optional arguments:
 
-  \begin{enumerate}
+  \begin{description}
   \item \code{prior} - A list contain the name of the prior and the
     corresponding hyperparameters. Examples: \code{prior =
       {[}`normal\_gamma', betaubar, Vubar, nuubar, Subar{]}},
@@ -915,11 +922,11 @@ that are specified by the user. To initialise the class
       nuubar, Subar{]}} and \code{prior = {[}`g\_prior', betaubar,
       g{]}}. If none of these options are chosen or they are
     miss-specified then the default prior will be Jeffreys prior.
-  \end{enumerate}
-\end{enumerate}
+  \end{description}
+\end{description}
 \code{BayesRegression} contains several functions that may be of
 interest to the user. In particular:
-\begin{enumerate}
+\begin{description}
 \item \code{sample()} - Returns a sample of $\sigma$ and $\bm{\beta}$
   from the joint posterior distribution for the normal-inverted gamma
   prior, Jeffreys prior and Zellner's g-prior. If the normal-gamma
@@ -952,7 +959,7 @@ interest to the user. In particular:
   $\bm{\beta}$ and for the scale parameter ($\sigma$ or $\kappa)$. The
   output also reports the log-likelihood and the Bayesian information
   criterion (BIC).
-\end{enumerate}
+\end{description}
 In MCMC sampling schemes it is common that for a subset of the unknown
 parameters of interest the full conditional posterior distribution
 will correspond to that of a linear regression model, where the scale
@@ -977,25 +984,25 @@ specify their \emph{a priori} beliefs using Zellner's g-prior, where\[
 \bm{\beta}|\sigma\sim
 N\left(\bm{\beta},g\sigma^{2}\bm{X}^{T}\bm{X}\right).\] To initialise
 the class the user must specify:
-\begin{enumerate}
+\begin{description}
 \item \code{yvec} - A one dimensional \pkg{Numpy} array containing the
   data.
 \item \code{xmat} - A two dimensional \pkg{Numpy} array containing the
   regressors.
 \item \code{{*}{*}kwargs} - Optional arguments:
 
-\begin{enumerate}
+\begin{description}
 \item \code{prior} - A list containing the name of the prior and the
   corresponding hyperparameters. Examples: \code{prior={[}`normal',
     betaubar, Vubar{]} or {[}`g\_prior', betaubar, g{]}}. If none of
   these options are chosen or they are miss-specified then the default
   prior will be Jeffreys prior.
-\end{enumerate}
-\end{enumerate}
+\end{description}
+\end{description}
 \code{CondBetaRegSampler} contains several functions that may be of
 interest to the user. In particular:
 
-\begin{enumerate}
+\begin{description}
 
 \item \code{sample(sigma)} - Returns a sample of $\bm{\beta}$ from the
   posterior distribution specified in \ref{eq:post_condbeta}.
@@ -1010,7 +1017,7 @@ interest to the user. In particular:
 \item \code{update\_xmat(xmat)} - Updates xmat in
   \code{CondBetaRegSampler}. This is often useful when the class is
   being used as a part of an MCMC sampling scheme.
-\end{enumerate}
+\end{description}
 Many Bayesian models contain linear components with unknown scale
 parameters, hence a class has been specified named
 \code{CondScaleSampler}, which can be used to individually sample
@@ -1030,16 +1037,16 @@ $\kappa=\frac{1}{\sigma^{2}},$ where\[ \kappa\sim
 G\left(\frac{\underline{\nu}}{2},\frac{\underline{S}}{2}\right).\] To
 initialise the class \code{CondScaleSamper} the user may first
 specify:
-\begin{enumerate}
+\begin{description}
 \item \code{{*}{*}kwargs} - Options arguments:
-\begin{enumerate}
+\begin{description}
 \item \code{prior} - List containing the name of the prior and the
   corresponding hyperparameters. Examples:
   \code{prior={[}`gamma',nuubar,subar{]}} or
   \code{{[}`inverted-gamma', nuubar, subar{]}}. If no prior is
   specified the Jeffreys prior is used.
-\end{enumerate}
-\end{enumerate}
+\end{description}
+\end{description}
 \pkg{PyMCMC} also includes another class that can be used for the
 direct analysis of the linear regression model. The class is called
 \code{StochasticSearch} and can be used in conjunction with the class
@@ -1071,22 +1078,22 @@ g-prior, which is described in (\ref{eq:g-prior}).
 \emph{StochasticSearch }is designed to be used in conjunction with the
 MCMC sampling class. To initialise \code{StochasticSearch} the user
 must specify:
-\begin{enumerate}
+\begin{description}
 \item \code{yvec} - One dimensional \pkg{Numpy} array containing the
   dependent variable.
 \item \code{xmat} - Two dimensional \pkg{Numpy} array containing the
   regressors.
 \item \code{prior} - List with the following structure
   \code{{[}betaubar, g{]}}.
-\end{enumerate}
+\end{description}
 The class \code{StochasticSearch} also contains the following
 function:
-\begin{enumerate}
+\begin{description}
 \item \code{sample\_gamma(store)} - Returns a sample of $\bm{\gamma}.$
   The only argument to pass into the function \code{sample\_gamma} is
   the storage dictionary that is passed by default to each of the
   classes that are called from the class \code{MCMC }in \pkg{PyMCMC}.
-\end{enumerate}
+\end{description}
 
 \section{Empirical illustrations}
 \label{sec:Empirical-Illustrations}
